# production-rag-eval

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  eval-nightly.yml
data/financebench/: README.md
docs/: ablation_results.md  architecture.md  conformal_abstention.md  contextual_retrieval.md  eval_methodology.md  financebench_analysis.md
evals/: __init__.py  _claude_deepeval.py  _embeddings.py  abstention_eval.py  cache.py  citation_eval.py  deepeval_eval.py  hhem_eval.py  ragas_eval.py  run_eval.py
scripts/: build_index.py  calibrate_abstention.py  download_financebench.py  run_ablation.py
src/rag_eval/: __init__.py  __main__.py  config.py  embedding.py  errors.py  logging.py  pipeline.py  text.py
src/rag_eval/abstention/: __init__.py  calibration.py  predictor.py  scorer.py
src/rag_eval/api/: __init__.py  server.py
src/rag_eval/generation/: __init__.py  answer.py  citations.py
src/rag_eval/ingestion/: __init__.py  chunker.py  contextual.py  indexer.py  loader.py
src/rag_eval/retrieval/: __init__.py  bm25.py  dense.py  metrics.py  rerank.py  rrf.py
tests/: conftest.py  test_abstention.py  test_answer.py  test_bm25.py  test_chunker.py  test_citation_eval.py  test_config_and_api.py  test_contextual.py  test_dense.py  test_eval_smoke.py  test_eval_units.py  test_indexer.py  test_loader.py  test_metrics.py  test_rerank.py  test_rrf.py
tests/fixtures/: sample_10k_chunk.txt  sample_cohere_rerank.json  sample_financebench_q.json
web/: index.html  package-lock.json  package.json  tsconfig.json
web/architecture/: ArchitectureDiagram.css  ArchitectureDiagram.tsx  README.md
web/src/: main.tsx
