[project]
name = "production-rag-eval"
version = "0.1.0"
description = "Production RAG pipeline on FinanceBench: hybrid retrieval + Contextual Retrieval + conformal abstention + Citations API + triple eval."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sebastien Henry" }]
dependencies = [
  "anthropic>=0.43.0,<0.50",
  "cohere==5.13.4",
  "voyageai==0.3.2",
  "qdrant-client==1.12.1",
  "rank-bm25==0.2.2",
  "ragas==0.2.12",
  "deepeval==2.4.1",
  "langchain-anthropic>=0.3.4,<0.4",
  "langchain-text-splitters>=0.3.4,<0.4",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.0",
  "httpx==0.28.1",
  "structlog==24.4.0",
  "pypdf==5.1.0",
  "numpy==2.1.3",
  "scipy==1.14.1",
  "datasets==3.1.0",
  "typer==0.15.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.8.4",
  "mypy==1.13.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "respx==0.21.1",
  "pytest-mock==3.14.0",
]

[project.scripts]
rag-eval = "rag_eval.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "evals", "scripts"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "FIX002", "TD002", "TD003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN", "ARG", "SLF001", "TC", "I001"]
"scripts/**" = ["T201", "INP001"]
"evals/**" = ["T201", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unreachable = true

# voyageai ships no py.typed / __all__; treat it as untyped (Any) so its
# attribute access (voyageai.Client) does not trip strict attr-defined checks.
[[tool.mypy.overrides]]
module = ["voyageai", "voyageai.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--cov=src/rag_eval --cov-fail-under=85 -q"
testpaths = ["tests"]
markers = [
  "eval: end-to-end eval tests that require live credentials (deselect with '-m \"not eval\"').",
]
